--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,124 @@
+.app {
+  padding-bottom: 600px;
+  height: 100vh;
+}
+
+h1 {
+  font-size: 1.5rem;
+}
 .header {
   display: flex;
   justify-content: flex-end;
-  background-color: aquamarine;
-  padding: 10px;
+  background-color: rgb(18, 15, 49);
+  padding: 15px;
+  color: white;
+}
+
+.cart {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.cart > button {
+  padding: 5px;
+  background-color: transparent;
+  color: white;
+  border: none;
 }
 
 .product-container {
   display: flex;
+  justify-content: center;
+  gap:2rem;
   flex-wrap: wrap;
+  height: 500px;
+  padding: 50px;
+  margin-bottom: 200px;
+}
+
+.product-item {
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  box-shadow: 2px 2px 17px 0px rgba(0,0,0,0.75);
+  padding: 20px;
+  height: 500px;
+  width: 250px;
+}
+
+.product-image-container {
+  height: 30%;
+  width: 100%;
+  display: flex;
+}
+
+.product-image-container > img {
+  height: 100%;
+  width: 100%;
+}
+
+.product-buttons {
+  display: flex;
+  margin-top: 20px;
+  gap: 0.5rem;
+}
+
+.product-buttons button {
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  border: solid 1px rgba(0, 0, 0, 0.202);
+  font-weight: bold;
+  
+}
+
+.product-buttons button:nth-child(1) {
+  background-image: linear-gradient(-180deg, #6ed45f, #1dc54f);
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 2px 4px;
+  color: #FFFFFF;
+  border: 0;
+}
+
+.product-buttons button:nth-child(2) {
+  background-image: linear-gradient(-180deg, #FF7E31, #E62C03);
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 2px 4px;
+  color: #FFFFFF;
+  border: 0;
+}
+
+
+
+.button-42 {
+  background-color: initial;
+  background-image: linear-gradient(-180deg, #FF7E31, #E62C03);
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 2px 4px;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Inter,-apple-system,system-ui,Roboto,"Helvetica Neue",Arial,sans-serif;
+  height: 40px;
+  line-height: 40px;
+  outline: 0;
+  overflow: hidden;
+  padding: 0 20px;
+  pointer-events: auto;
+  position: relative;
+  text-align: center;
+  touch-action: manipulation;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: top;
+  white-space: nowrap;
+  width: 100%;
+  z-index: 9;
+  border: 0;
+  transition: box-shadow .2s;
+}
+
+button:hover {
+  box-shadow: rgba(253, 76, 0, 0.5) 0 3px 8px;
 }
