--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,8 @@ h1 {
 }
 .header {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
+  align-items: center;
   background-color: rgb(18, 15, 49);
   padding: 15px;
   color: white;
