--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,15 @@ h1 {
   border: none;
 }
 
+.product-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+
 .product-container {
   display: flex;
   justify-content: center;
@@ -44,7 +53,7 @@ h1 {
   border-radius: 10px;
   box-shadow: 2px 2px 17px 0px rgba(0,0,0,0.75);
   padding: 20px;
-  height: 500px;
+  height: auto;
   width: 250px;
 }
 
@@ -52,16 +61,22 @@ h1 {
   height: 30%;
   width: 100%;
   display: flex;
+  overflow: hidden; 
 }
 
 .product-image-container > img {
   height: 100%;
   width: 100%;
+  transition: transform 0.3s ease-in-out;
+}
+
+.product-image-container > img:hover {
+  transform: scale(1.2); /* Increase the scale on hover (adjust as needed) */
 }
 
 .product-buttons {
   display: flex;
-  margin-top: 20px;
+  margin-top: auto;
   gap: 0.5rem;
 }
 
@@ -71,7 +86,6 @@ h1 {
   cursor: pointer;
   border: solid 1px rgba(0, 0, 0, 0.202);
   font-weight: bold;
-  
 }
 
 .product-buttons button:nth-child(1) {
@@ -88,6 +102,10 @@ h1 {
   box-shadow: rgba(0, 0, 0, 0.1) 0 2px 4px;
   color: #FFFFFF;
   border: 0;
+}
+
+.search-box > input {
+  padding: 10px;
 }
 
 /* cart styles */
