--- a/src/App.css
+++ b/src/App.css
@@ -115,6 +115,7 @@ h1 {
   flex-direction: column;
   align-items: center;
   gap:2rem;
+  margin-top: 20px;
 }
 
 .cart-header {
@@ -143,5 +144,11 @@ h1 {
 .cart-details {
   display: flex;
   flex-direction: column;
+}
+
+.cart-price-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
